objects/PO__c/PO__c.object-meta.xml
<CustomObject>
    <label>Customer Purchase Order</label>
    <nameField>
        <label>PO Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>