objects/PO__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>P/O&apos;s</relationshipLabel>
    <relationshipName>P_O_s</relationshipName>
    <type>Lookup</type>
</CustomField>