objects/PO__c/fields/P_O_Value__c.field-meta.xml
<CustomField>
    <fullName>P_O_Value__c</fullName>
    <description>P/O Value</description>
    <inlineHelpText>P/O Value</inlineHelpText>
    <label>P/O Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>