objects/PO__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <formula>TEXT(Site_Contract__r.AM_System_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Type</label>
    <type>Text</type>
</CustomField>