objects/PO__c/fields/Purchase_Order_Comments__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Comments__c</fullName>
    <description>Purchase Order Comments</description>
    <inlineHelpText>Attach the physical document that had the P/O number on, and/or scan in and attach any hard copy P/Os to the Purchase Order you have created. If the P/O was given to you verbally, state this in the Purchase Order Comments.</inlineHelpText>
    <label>Purchase Order Comments</label>
    <type>TextArea</type>
</CustomField>