objects/PO__c/fields/Purchase_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Date__c</fullName>
    <description>Purchase Order Date - Date on the Customer Purchase Order</description>
    <label>Purchase Order Date</label>
    <type>Date</type>
</CustomField>