objects/PO__c/fields/Purchase_Order_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Expiry_Date__c</fullName>
    <description>Customers Purchase Order Expiry Date, if applicable</description>
    <label>Purchase Order Expiry Date</label>
    <type>Date</type>
</CustomField>