objects/PO__c/fields/Purchase_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Type__c</fullName>
    <description>Purchase Order Type</description>
    <label>Purchase Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Reactive Visit</fullName>
            </value>
            <value>
                <fullName>Service Visit</fullName>
            </value>
            <value>
                <fullName>Small Works</fullName>
            </value>
            <value>
                <fullName>Site Contract Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>