objects/PO__c/fields/Site_Contract__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Site Contract</description>
    <label>Site Contract</label>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipLabel>P/O&apos;s</relationshipLabel>
    <relationshipName>P_O_s</relationshipName>
    <type>Lookup</type>
</CustomField>