objects/PO__c/fields/System_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Contract_Type__c</fullName>
    <formula>TEXT(Site_Contract__r.AM_System_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Contract Type</label>
    <type>Text</type>
</CustomField>