objects/PO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Purchase_Order_Type__c</columns>
    <columns>P_O_Value__c</columns>
    <columns>Purchase_Order_Date__c</columns>
    <columns>Purchase_Order_Expiry_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>All</label>
</ListView>